# stock-tui

./: .gitignore  Cargo.toml  README.md  fetch_stock.py  install.sh  stock_tui.py  top-tickers.csv
indicators/: adx.py  bollinger.py  macd.py  volume.py
src/: app.rs  main.rs  ui.rs
